<resources>
    <string name="OK">OK</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="_1_minutes">1 minutes</string>
    <string name="_2_minutes">2 minutes</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="_30_seconds">30 seconds</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activate">Activate</string>
    <string name="activated">Active</string>
    <string name="active_now">Active Now</string>
    <string name="ad_is_loading">Ad is Loading</string>
    <string name="ad_placement_here">Ad Placement here</string>
    <string name="ad_unit_admob_banner">ca-app-pub-4563216819962244/2679220025</string>
    <string name="ad_unit_admob_interstitial">ca-app-pub-4563216819962244/9388098605</string>
    <string name="ad_unit_admob_native">ca-app-pub-4563216819962244/9547880705</string>
    <string name="ad_unit_admob_rewarded">ca-app-pub-4563216819962244/1366138358</string>
    <string name="ad_unit_applovin_banner" />
    <string name="ad_unit_applovin_interstitial" />
    <string name="ad_unit_applovin_mrec_banner" />
    <string name="ad_unit_applovin_native" />
    <string name="ad_unit_applovin_rewarded" />
    <string name="ad_units">Ad Units</string>
    <string name="admin_deactivated_now">Admin access deactivated, Now uninstall from setting/apps</string>
    <string name="admin_permission">This app uses the (Monitor screen unlock attempts) DEVICE ADMIN PERMISSION to detect wrong attempt in your phone. Click activate button to start capturing the person who unlock your phone when you are not around.</string>
    <string name="ads_provider">ADMOB</string>
    <string name="ads_sdk_version">SDK Version</string>
    <string name="advertisement_network_settings">Advertisement Network Settings</string>
    <string name="age_restricted_user">Age Restricted User</string>
    <string name="all_permissions_granted">All Permissions Granted</string>
    <string name="allow">Allow</string>
    <string name="allow_permissions">Allow Permissions</string>
    <string name="already_subscribe">Already Subscribe</string>
    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>
    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing maxium detected results button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maxium detected results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing threshold of detected object results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing threshold of detected object results button</string>
    <string name="analytics_prefix" />
    <string name="androidx_startup">androidx.startup</string>
    <string name="api_level">API Level</string>
    <string name="app_intro_back_button">BACK</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_image_content_description">graphics</string>
    <string name="app_intro_next_button">NEXT</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_name">Third Eye Camera</string>
    <string name="app_not_found">App not found</string>
    <string name="app_review_status">App Review Status</string>
    <string name="app_title">Third Eye</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_info">Application Info</string>
    <string name="applovin_agree_message">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="applovin_alt_privacy_policy_text" />
    <string name="applovin_continue_button_text">Continue</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="applovin_pp_and_tos_title">To use %s you must agree to our Terms &amp; Conditions and affirm you have reviewed our Privacy Policy</string>
    <string name="applovin_pp_title">To use %s you must affirm that you have reviewed and acknowledged our Privacy Policy.</string>
    <string name="applovin_privacy_policy_text">Privacy Policy</string>
    <string name="applovin_sdk_key">cMGlg2ieK3wNSpDuxGKn0Rnsklgf1JcEm21Fk5d5IXSzS_qwZzVyHeAao4iZ4UEqlOlh9RnDprTRk5PPPK-TQW</string>
    <string name="applovin_terms_of_service_text">Terms &amp; Conditions</string>
    <string name="applovin_terms_of_use_text">Terms of Use</string>
    <string name="are_you_sure_delete">Are you sure you want to delete?</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit ?</string>
    <string name="back_camera">Back Camera</string>
    <string name="background_video">Background Video</string>
    <string name="background_video_info">Record video in the background without interruptions, even while using other apps.</string>
    <string name="background_video_recording">Background Video Recording</string>
    <string name="bath_1">Instructions for searching hidden camera inside bathroom:</string>
    <string name="bath_2">● Behind or inside decorative items like mirrors, picture frames, or wall art.</string>
    <string name="bath_3">● Inside air vents or exhaust fans.</string>
    <string name="bath_4">● Inside light fixtures or electrical outlets.</string>
    <string name="bath_5">● Behind toiletries or cleaning supplies.</string>
    <string name="bath_6">● On the ceiling or in the corners of the room.</string>
    <string name="camera_preview_size">Camera Preview Size</string>
    <string name="camera_select">Camera</string>
    <string name="done">Done</string>
    <string name="fhd_1080p">FHD 1080p</string>
    <string name="front_camera">Front Camera</string>
    <string name="hd_720p">HD 720p</string>
    <string name="highest">HIGHEST</string>
    <string name="information">Information</string>
    <string name="large">Large</string>
    <string name="lowest">LOWEST</string>
    <string name="medium">Medium</string>
    <string name="not_supported">Your device lacks the capability to detect electromagnetic sensors. Please use a different device to measure radiation.</string>
    <string name="note">Note:</string>
    <string name="note_into">Without granting this permission, you won\'t be able to capture a photo of the intruder after a wrong attempt.</string>
    <string name="ok">OK</string>
    <string name="outdoor_1">Instructions for searching hidden camera outside room:</string>
    <string name="outdoor_2">● Around the door frame or entrance.</string>
    <string name="outdoor_3">● Near windows or ventilation openings.</string>
    <string name="outdoor_4">● In corners of the building\'s exterior.</string>
    <string name="outdoor_5">● Among foliage, trees, or landscaping near the room.</string>
    <string name="outdoor_6">● On the exterior walls.</string>
    <string name="outside_step_eight">8) Ensure Privacy: If you find a hidden camera, ensure your privacy is protected. If it\'s on your property, you have the right to remove it. If it\'s in a public space, contact local authorities and report the situation.</string>
    <string name="outside_step_five">5) Search for Audio Recording Devices: Consider the possibility of hidden audio recording devices as well. Look for microphones or audio recording equipment placed outside the room.</string>
    <string name="outside_step_four">4) Inspect Lighting Fixtures: Check outdoor lighting fixtures, such as security lights, for any unusual or additional components that may be cameras or recording devices.</string>
    <string name="outside_step_one">1) Visual Inspection: Start by conducting a visual inspection of the exterior of the room. Look for any areas where a camera could be hidden or mounted, such as:</string>
    <string name="outside_step_seven">7) Consult a Professional: If you have strong suspicions but cannot locate any hidden cameras on your own, it\'s advisable to consult with a professional who specializes in security or counter-surveillance. They can use specialized equipment to thoroughly sweep the area.</string>
    <string name="outside_step_six">6) Use Your Smartphone: Some smartphone apps are designed to detect hidden cameras by analyzing the surroundings for unusual infrared emissions. You can download such apps and use them to scan the area.</string>
    <string name="outside_step_three">3) Use a Camera Detector: If you have access to a camera detector or bug detector, use it to scan the area outside the room. These devices can detect the presence of hidden cameras or transmitting signals. Follow the manufacturer\'s instructions for best results.</string>
    <string name="outside_step_two">2) Check for Unusual Objects: Pay attention to any unusual or out-of-place objects or equipment near the room. Cameras may be disguised as everyday items or outdoor fixtures.</string>
    <string name="sd_480p">SD 480p</string>
    <string name="select_camera_for_background_video_recording">Select Camera for background video recording</string>
    <string name="select_the_desired">Select the desired quality for video recording</string>
    <string name="select_the_desired_camera">Select the desired camera preview size</string>
    <string name="sensor_not_supported">Sensor not Supported</string>
    <string name="small">Small</string>
    <string name="uhd_2160p">UHD 2160p</string>
    <string name="video_resolution">Video Resolution</string>
</resources>