<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/outdoor_1"
                android:fontFamily="@font/worksans_medium"
                android:letterSpacing="0.02"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outside_step_one"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/outdoor_2"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outdoor_3"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outdoor_4"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outdoor_5"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outdoor_6"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/outside_step_two"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/outside_step_three"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/outside_step_four"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/outside_step_five"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/outside_step_six"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/outside_step_seven"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/outside_step_eight"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
