<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/permission_layout"
    android:padding="@dimen/_15sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp">
    <TextView
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/information"
        android:letterSpacing="0.03"/>
    <TextView
        android:textSize="14sp"
        android:textColor="@color/colorTextSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_permission"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:letterSpacing="0.02"/>
    <TextView
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/note"
        android:letterSpacing="0.03"/>
    <TextView
        android:textSize="14sp"
        android:textColor="@color/colorTextSecond"
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_into"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:letterSpacing="0.02"/>
    <androidx.appcompat.widget.AppCompatButton
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_gravity="end"
        android:id="@+id/activate"
        android:background="@drawable/button_click"
        android:paddingLeft="@dimen/_25sdp"
        android:paddingRight="@dimen/_25sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        android:text="@string/activate"
        android:textAllCaps="false"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:letterSpacing="0.06"
        android:paddingHorizontal="@dimen/_25sdp"/>
</LinearLayout>
