<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/_15sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_select"
        android:drawablePadding="@dimen/_10sdp"
        android:letterSpacing="0.03"
        android:drawableTint="@color/colorPrimaryDark"
        app:drawableStartCompat="@drawable/ic_camera"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="14sp"
        android:textColor="@color/colorTextSecond"
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/select_camera_for_background_video_recording"
        android:layout_below="@+id/head"
        android:lineSpacingExtra="@dimen/_4sdp"/>
    <View
        android:id="@+id/view"
        android:background="@color/dimColor"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/body"
        android:alpha="0.2"/>
    <RadioGroup
        android:id="@+id/camera_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_below="@+id/view"
        android:layout_marginStart="20dp">
        <RadioButton
            android:textSize="17sp"
            android:textColor="@color/black"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/back_camera"
            android:paddingHorizontal="@dimen/_15sdp"/>
        <RadioButton
            android:textSize="17sp"
            android:textColor="@color/black"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/front_camera"
            android:paddingHorizontal="@dimen/_15sdp"/>
    </RadioGroup>
    <androidx.appcompat.widget.AppCompatButton
        android:textColor="@color/white"
        android:id="@+id/ok"
        android:background="@drawable/button_click"
        android:paddingLeft="@dimen/_7sdp"
        android:paddingRight="@dimen/_7sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/done"
        android:layout_below="@+id/camera_group"
        android:layout_alignParentEnd="true"
        android:paddingHorizontal="@dimen/_7sdp"
        style="@style/Widget.AppCompat.Button.Borderless"/>
</RelativeLayout>
