<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="200dp">
    <RelativeLayout
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/sad_rectangle"/>
        <Button
            android:textSize="16sp"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_not_supported"
            android:layout_centerInParent="true"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </RelativeLayout>
    <TextView
        android:textColor="@android:color/black"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_supported"
        android:layout_centerInParent="true"
        android:lineSpacingExtra="@dimen/_3sdp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:textColor="@color/white"
        android:id="@+id/ok"
        android:background="@drawable/button_click"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/ok"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
